--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PWA Maze Game</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>My PWA Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>PWA Maze Game</h1>
-    <canvas id="maze"></canvas>
-    <div id="controls">
-      <button id="up">Up</button>
-      <button id="down">Down</button>
-      <button id="left">Left</button>
-      <button id="right">Right</button>
-    </div>
-    <script src="script.js"></script>
+    <canvas id="game-canvas"></canvas>
+    <script src="maze.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
