--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Dice Roll Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="game">
